// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexContainer FlexContainer with {"alignContent": "flex-start", "alignItems": "flex-start", "direction": "row", "justifyContent": "flex-start"} 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex-wrap: no-wrap;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  margin: calc(0px / -2) calc(0px / -2);
}

.emotion-0>* {
  margin: calc(0px / 2) calc(0px / 2);
}

<div
  class="emotion-0"
/>
`;

exports[`FlexContainer FlexContainer with {"columnGap": "10px", "rowGap": "10px"} 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: no-wrap;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  margin: calc(10px / -2) calc(10px / -2);
}

.emotion-0>* {
  margin: calc(10px / 2) calc(10px / 2);
}

<div
  class="emotion-0"
/>
`;

exports[`FlexContainer FlexContainer with {"wrap": true} 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: calc(0px / -2) calc(0px / -2);
}

.emotion-0>* {
  margin: calc(0px / 2) calc(0px / 2);
}

<div
  class="emotion-0"
/>
`;
